--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_subdirectory(lib/yastdlib build)
+add_subdirectory(lib/yastdlib yastdlib)
 
-#add_compile_definitions(LOCAL)
+add_compile_definitions(LOCAL)
 
 add_executable(soln src/main.cpp)
 target_link_libraries(soln PRIVATE yastdlib)
